--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
     "gatsby": "^5.3.3",
     "gatsby-plugin-emotion": "^8.3.0",
     "gatsby-plugin-image": "^3.3.2",
+    "gatsby-plugin-react-helmet": "^6.3.0",
     "gatsby-plugin-sharp": "^5.3.2",
     "gatsby-plugin-typescript": "^5.3.1",
+    "gatsby-remark-copy-linked-files": "^6.3.0",
+    "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-images": "^7.3.1",
+    "gatsby-remark-prismjs": "^7.3.0",
+    "gatsby-remark-smartypants": "^6.3.0",
     "gatsby-source-filesystem": "^5.3.1",
+    "gatsby-transformer-remark": "^6.3.2",
     "gatsby-transformer-sharp": "^5.3.1",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.47.1",
